syntax = "proto3";

package com.aceattorneyonline.master.events;

option java_outer_classname = "SharedEventProtos";

import "uuid.proto";

// Flood controlled
message GetVersion {
	Uuid id = 1;
}

// Flood controlled
message GetMotd {
	Uuid id = 1;
}